api naming convention slug_case -> pascalCase
