# server/app/Image.php
@@ -6,14 +6,14 @@ use Illuminate\Database\Eloquent\Model;
 
 /**
  * @property integer id
- * @property integer project_id
- * @property string image_id
+ * @property integer projectId
+ * @property string imageId
  * @property string name
  * @property integer width
  * @property integer height
  * @property integer preferredWidth
  * @property integer preferredHeight
- * @property string file_name
+ * @property string fileName
  */
 class Image extends Model
 {
@@ -35,7 +35,7 @@ class Image extends Model
      * @var array
      */
     protected $fillable = [
-        'image_id', 'name', 'width', 'height', 'file_name',
+        'imageId', 'name', 'width', 'height', 'fileName',
     ];
 
     /**
