# server/database/seeds/DatabaseSeeder.php
@@ -25,20 +25,20 @@ class DatabaseSeeder extends Seeder
         $t = new \App\Text();
 
         $t->name = 'Webpage Title';
-        $t->text_id = 'webpage_title';
-        $t->min_length = 10;
-        $t->max_length = 20;
+        $t->textId = 'webpage_title';
+        $t->minLength = 10;
+        $t->maxLength = 20;
 
         $p->texts()->save($t);
 
-        $en_US = new \App\Locale(['locale_id' => 'en_US', 'name' => 'English']);
-        $hu_HU = new \App\Locale(['locale_id' => 'hu_HU', 'name' => 'Hungarian']);
+        $en_US = new \App\Locale(['localeId' => 'en_US', 'name' => 'English']);
+        $hu_HU = new \App\Locale(['localeId' => 'hu_HU', 'name' => 'Hungarian']);
         $p->locales()->saveMany([
             $en_US,
             $hu_HU
         ]);
 
-        $t->localtexts()->saveMany([
+        $t->values()->saveMany([
             new \App\Localtext([
                 'locale_id' => $en_US->id,
                 'value' => 'Sample Project Webpage'
@@ -49,21 +49,21 @@ class DatabaseSeeder extends Seeder
             ])]);
 
         $i = new \App\Image();
-        $i->image_id = 'facebook_icon';
+        $i->imageId = 'facebook_icon';
         $i->name = 'Facebook Icon';
         $i->width = 500;
         $i->height = 512;
         $i->preferredWidth = 512;
         $i->preferredHeight = 512;
-        $i->file_name = 'logo.png';
+        $i->fileName = 'logo.png';
         $p->images()->save($i);
 
         $f = new \App\File();
-        $f->file_id = 'terms_and_conditions';
+        $f->fileId = 'terms_and_conditions';
         $f->name = 'Terms and Conditions';
-        $f->file_name = 'licence.pdf';
+        $f->fileName = 'licence.pdf';
         $f->ext = ['doc', 'docx', 'pdf'];
-        $f->max_size = 10000;
+        $f->maxSize = 10000;
         $p->files()->save($f);
 
     }
